minor change to overflow issue specific to 768px width viewport

--- a/app/styles/_layout.scss
+++ b/app/styles/_layout.scss
@@ -21,7 +21,8 @@ body {
 	.container {
 		@media screen and (max-width: 768px) {
 			padding: 0;
-			margin: 0;		
+			margin: 0;
+			width: 100%;		
 		}
 	}
 
